# streaming-etl

./: .gitignore  README.md
assets/: architecture.drawio
streaming-etl/: README.md  docker-compose.yml  remove_topic.sh  reset_transformer_offset.sh  reset_transformer_offsets.sh  start_connector.sh  start_sink_connector.sh  start_source_connector.sh
streaming-etl/services/app-db/: 01_create_user.sql  02_create_call.sql  04_create_call_participant.sql  README.md  postgres.conf
streaming-etl/services/data-generator/: Dockerfile  README.md  main.py  pyproject.toml
streaming-etl/services/data-generator/modules/: call.py  call_participant.py  db_connection.py  emulate_call.py  emulate_registration.py  emulate_user_edit.py  populate.py  room.py  room_call.py  room_member.py  user.py  utils.py
streaming-etl/services/dwh/: README.md
streaming-etl/services/dwh/data-modeling/: dwh.drawio
streaming-etl/services/kafka-connect/: Dockerfile  connector_config.json  sink_config.json
streaming-etl/services/staging-db/: README.md
streaming-etl/services/transformer/: .dockerignore  .env.dev  Dockerfile  README.md  generate_models.sh  main.py  pyproject.toml
streaming-etl/services/transformer/models/: call_fact.py  call_participant.py  participant_bridge.py  participant_group_dim.py  processing_error.py  room_dim.py  test.py  user.py  user_dim.py
streaming-etl/services/transformer/modules/: enums.py  env.py  logger.py  process_call.py  process_call_participant.py  process_room.py  process_room_call.py  process_user.py  schema_registry_api.py  staging_db.py  utils.py
(+15 files in other folders)
