[tool.poetry]
name = "streaming-etl"
version = "0.1.0"
description = ""
authors = ["Beaglefoot <ch-e-st@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^13.3.4"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
